[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "kb-pulse"
version = "1.0.0"
description = "Sync your MacBook keyboard backlight to the beat"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "repoproh" }]
keywords = ["macos", "keyboard", "backlight", "music", "beat-detection", "dj"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "pyaudio>=0.2.13",
    "numpy>=1.24",
    "pyobjc-core>=9.2",
    "pyobjc-framework-Cocoa>=9.2",
]

[project.scripts]
kb-pulse = "kb_pulse:main"

[project.urls]
Homepage = "https://github.com/repoproh/kb-pulse"
Issues = "https://github.com/repoproh/kb-pulse/issues"
